[tool.poetry]
name = "latent-hierarchical"
version = "0.1.0"
description = ""
authors = ["Charles Low <charleslow88@gmail.com>"]
readme = "README.md"
packages = [{include = "latent_hierarchical"}]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^8.8.0"
statsmodels = "^0.13.5"
pydot = "^1.4.2"
black = "^22.12.0"
networkx = "^3.0"
matplotlib = "^3.7.0"

[tool.poetry.group.dev.dependencies]
numpy = "^1.24.1"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
